# Elections

./: CMakeLists.txt  makefile
include/: Agent.h  Graph.h  JoinPolicy.h  Party.h  SelectionPolicy.h  Simulation.h
src/: Agent.cpp  EdgeWeightSelectionPolicy.cpp  Graph.cpp  LastOfferJoinPolicy.cpp  MandatesJoinPolicy.cpp  MandatesSelectionPolicy.cpp  Party.cpp  Simulation.cpp  main.cpp
